@@ -21,28 +21,30 @@ libseahorse/seahorse-key-store.c
 libseahorse/seahorse-ldap-source.c
 libseahorse/seahorse-passphrase.c
 libseahorse/seahorse-passphrase.glade
+libseahorse/seahorse-pgp-key-op.c
+libseahorse/seahorse-pgp-key.c
+libseahorse/seahorse-pgp-source.c
 libseahorse/seahorse-prefs-cache.c
 libseahorse/seahorse-prefs.c
 libseahorse/seahorse-prefs.glade
 libseahorse/seahorse-progress.glade
-libseahorse/seahorse-pgp-key-op.c
-libseahorse/seahorse-pgp-key.c
-libseahorse/seahorse-pgp-source.c
 libseahorse/seahorse-recipients-store.c
 libseahorse/seahorse-recipients.c
 libseahorse/seahorse-recipients.glade
 libseahorse/seahorse-server-source.c
 libseahorse/seahorse-signatures.c
 libseahorse/seahorse-signer.glade
+libseahorse/seahorse-ssh-key.c
+libseahorse/seahorse-ssh-source.c
 libseahorse/seahorse-util.c
 libseahorse/seahorse-validity.c
 libseahorse/seahorse-widget.c
 plugins/gedit/seahorse-gedit.c
 plugins/gedit/seahorse-gedit.schemas.in
 plugins/gedit/seahorse-pgp.gedit-plugin.desktop.in
+plugins/nautilus-ext/seahorse-nautilus.c
 plugins/nautilus/seahorse-pgp-preferences.c
 plugins/nautilus/seahorse-pgp-preferences.desktop.in
-plugins/nautilus-ext/seahorse-nautilus.c
 src/main.c
 src/seahorse-add-subkey.c
 src/seahorse-add-subkey.glade
@@ -80,4 +82,6 @@ src/seahorse-revoke.c
 src/seahorse-revoke.glade
 src/seahorse-sign.c
 src/seahorse-sign.glade
+src/seahorse-ssh-key-properties.c
+src/seahorse-ssh-key-properties.glade
 src/seahorse.desktop.in
