@@ -1,3 +1,8 @@
+2005-11-01  Adam Weinberger  <adamw@gnome.org>
+
+	* POTFILES.in: Added missing files.
+	* en_CA.po: Updated Canadian English translation.
+
 2005-10-19  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
